# frdupl

./: CMakeLists.txt  d_scanner.cpp  d_scanner.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
